# dwerty

./: .clang-format  .gitignore  .shellcheckrc  AGENTS.md  APPROACH.md  Containerfile  EVALUATION.md  PLAN.md  README.md  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: codeql.yml  firmware-max.yml  firmware-ultra.yml  firmware.yml  tests.yml  ultra-fork-update.yml
docs/: INTEGRATION_TESTING.md
max/: Containerfile  README.md
max/scripts/: firmware.sh  test.sh
max/tests/: test_debounce_patch.py  test_shortcuts_mapping.py
max/via/: v6_max_ansi_encoder.json
scripts/: build.sh  build_artifacts.sh  firmware.sh  flash.sh  flash_easy.sh  install_keymap.sh  lint.sh  podman_build.sh  podman_run.sh  setup_qmk.sh  test.sh  test_integration.sh  test_qmk_build.sh  update_qmk.sh  wsl_attach_usb.ps1
tests/: test_integration_simulation.py  test_shortcuts_mapping.py
ultra/: README.md  build.yaml  flash_map.ini
ultra/config/: keychron_v6_ultra_ansi.conf  keychron_v6_ultra_ansi.keymap  west.yml
ultra/patches/: 0001-persist-default-layer.patch  0002-rgb-dwerty-flash.patch
ultra/scripts/: build.sh  gen_keymap.py  package.sh  scdfu_probe.py  test.sh
ultra/tests/: parity_dq.py
ultra/tests/dvorak-qwerty/: behavior_keymap.dtsi  behavior_overlay.dtsi
ultra/tests/dvorak-qwerty/1-dvorak-and-ctrl-qwerty/: keycode_events.snapshot  native_sim.keymap
ultra/tests/dvorak-qwerty/2-oneshot-ctrl-qwerty/: events.patterns  keycode_events.snapshot  native_sim.keymap
via/: v6_max_ansi_encoder.json
(+10 files in other folders)
