[project]
name = "keychron-v6-max-dvorak-qwerty"
version = "0.1.0"
description = "Dvorak-QWERTY keymap for Keychron V6 Max"
requires-python = ">=3.8"

[tool.ruff]
# Ruff configuration for Python linting
line-length = 100
target-version = "py38"

# Exclude directories
exclude = [
    ".git",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# Test files can use assert statements and have longer lines
"tests/*.py" = ["B011"]

[tool.ruff.lint.isort]
known-first-party = ["tests"]
