[project]
name = "keychron-v6-max-dvorak-qwerty"
version = "0.1.0"
description = "Dvorak-QWERTY keymap for Keychron V6 Max"
requires-python = ">=3.8"

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    ".git",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["B011"]

[tool.ruff.lint.isort]
known-first-party = ["tests"]
